; ModuleID = '/home/carl/AnghaBench/memcached/extr_logger.c__logger_log_item_get.c'
source_filename = "/home/carl/AnghaBench/memcached/extr_logger.c__logger_log_item_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i64 }
%struct.logentry_item_get = type { i32, i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*, i32, i8*, i32, i32, i32)* @_logger_log_item_get to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @_logger_log_item_get(%struct.TYPE_3__* %0, i32 %1, i8* %2, i32 %3, i32 %4, i32 %5) #0 {
  %7 = alloca %struct.TYPE_3__*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca %struct.logentry_item_get*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %7, align 8
  store i32 %1, i32* %8, align 4
  store i8* %2, i8** %9, align 8
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  store i32 %5, i32* %12, align 4
  %14 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %14, i32 0, i32 1
  %16 = load i64, i64* %15, align 8
  %17 = inttoptr i64 %16 to %struct.logentry_item_get*
  store %struct.logentry_item_get* %17, %struct.logentry_item_get** %13, align 8
  %18 = load i32, i32* %8, align 4
  %19 = load %struct.logentry_item_get*, %struct.logentry_item_get** %13, align 8
  %20 = getelementptr inbounds %struct.logentry_item_get, %struct.logentry_item_get* %19, i32 0, i32 0
  store i32 %18, i32* %20, align 4
  %21 = load i32, i32* %10, align 4
  %22 = load %struct.logentry_item_get*, %struct.logentry_item_get** %13, align 8
  %23 = getelementptr inbounds %struct.logentry_item_get, %struct.logentry_item_get* %22, i32 0, i32 1
  store i32 %21, i32* %23, align 4
  %24 = load i32, i32* %11, align 4
  %25 = load %struct.logentry_item_get*, %struct.logentry_item_get** %13, align 8
  %26 = getelementptr inbounds %struct.logentry_item_get, %struct.logentry_item_get* %25, i32 0, i32 4
  store i32 %24, i32* %26, align 4
  %27 = load %struct.logentry_item_get*, %struct.logentry_item_get** %13, align 8
  %28 = getelementptr inbounds %struct.logentry_item_get, %struct.logentry_item_get* %27, i32 0, i32 3
  %29 = load i32, i32* %28, align 4
  %30 = load i8*, i8** %9, align 8
  %31 = load i32, i32* %10, align 4
  %32 = call i32 @memcpy(i32 %29, i8* %30, i32 %31)
  %33 = load i32, i32* %12, align 4
  %34 = load %struct.logentry_item_get*, %struct.logentry_item_get** %13, align 8
  %35 = getelementptr inbounds %struct.logentry_item_get, %struct.logentry_item_get* %34, i32 0, i32 2
  store i32 %33, i32* %35, align 4
  %36 = load i32, i32* %10, align 4
  %37 = sext i32 %36 to i64
  %38 = add i64 20, %37
  %39 = trunc i64 %38 to i32
  %40 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %41 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %40, i32 0, i32 0
  store i32 %39, i32* %41, align 8
  ret void
}

declare dso_local i32 @memcpy(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
